tests/ui/fail/message-reference/l10n/en/resource.ftl
foo = Foo ({ $foo-var })
bar = { foo } Bar ({ $bar-var })
baz = { bar } Baz ({ $baz-var })
